service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 80
      protocol: TCP
      nodePort: 31000
  selector:
    app: nginx
