nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-domain.com
    http:
      paths:
        - path: /nginx
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 8081
        - path: /nginx-guid
          pathType: Prefix
          backend:
            service:
              name: nginx-guid-service
              port:
                number: 8081
